RESOLVED FIXED97373
DFG CSE assumes that a holy PutByVal does not interfere with GetArrayLength, when it clearly does
https://bugs.webkit.org/show_bug.cgi?id=97373
Summary DFG CSE assumes that a holy PutByVal does not interfere with GetArrayLength, ...
Filip Pizlo
Reported 2012-09-21 15:39:30 PDT
Patch forthcoming.
Attachments
the patch (10.72 KB, patch)
2012-09-21 15:42 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2012-09-21 15:42:33 PDT
Created attachment 165214 [details] the patch
Mark Hahnenberg
Comment 2 2012-09-21 15:53:48 PDT
Comment on attachment 165214 [details] the patch r=me
Filip Pizlo
Comment 3 2012-09-21 15:59:31 PDT
Note You need to log in before you can comment on or make changes to this bug.