Source/JavaScriptCore/dfg/DFGCSEPhase.cpp
@@ -96,6 +96,9 @@ private:
                 break;
 
             Node& otherNode = m_graph[index];
+            if (!otherNode.shouldGenerate())
+                continue;
+            
             if (node.op() != otherNode.op())
                 continue;
             
@@ -157,38 +160,34 @@ private:
         return NoNode;
     }
     
-    NodeIndex impureCSE(Node& node)
+    NodeIndex getArrayLengthElimination(NodeIndex array)
     {
-        NodeIndex child1 = canonicalize(node.child1());
-        NodeIndex child2 = canonicalize(node.child2());
-        NodeIndex child3 = canonicalize(node.child3());
-        
         for (unsigned i = m_indexInBlock; i--;) {
             NodeIndex index = m_currentBlock->at(i);
-            if (index == child1 || index == child2 || index == child3)
-                break;
-
-            Node& otherNode = m_graph[index];
-            if (node.op() == otherNode.op()
-                && node.arithNodeFlags() == otherNode.arithNodeFlags()) {
-                NodeIndex otherChild = canonicalize(otherNode.child1());
-                if (otherChild == NoNode)
+            Node& node = m_graph[index];
+            if (!node.shouldGenerate())
+                continue;
+            switch (node.op()) {
+            case GetArrayLength:
+                if (node.child1() == array)
                     return index;
-                if (otherChild == child1) {
-                    otherChild = canonicalize(otherNode.child2());
-                    if (otherChild == NoNode)
-                        return index;
-                    if (otherChild == child2) {
-                        otherChild = canonicalize(otherNode.child3());
-                        if (otherChild == NoNode)
-                            return index;
-                        if (otherChild == child3)
-                            return index;
-                    }
-                }
-            }
-            if (m_graph.clobbersWorld(index))
                 break;
+                
+            case PutByVal:
+                if (!m_graph.byValIsPure(node))
+                    return NoNode;
+                switch (node.arrayMode()) {
+                case ARRAY_STORAGE_TO_HOLE_MODES:
+                    return NoNode;
+                default:
+                    break;
+                }
+                break;
+                
+            default:
+                if (m_graph.clobbersWorld(index))
+                    return NoNode;
+            }
         }
         return NoNode;
     }
@@ -437,7 +436,7 @@ private:
                 break;
             Node& node = m_graph[index];
             if (!node.shouldGenerate())
-                break;
+                continue;
             switch (node.op()) {
             case CheckStructure:
             case ForwardCheckStructure:
@@ -1078,7 +1077,7 @@ private:
             break;
             
         case GetArrayLength:
-            setReplacement(impureCSE(node));
+            setReplacement(getArrayLengthElimination(node.child1().index()));
             break;
             
         case GetScopeChain:
