Source/JavaScriptCore/dfg/DFGGraph.h
@@ -469,6 +469,12 @@ public:
         return isNumberSpeculation(left) && isNumberSpeculation(right);
     }
     
+    // Note that a 'true' return does not actually mean that the ByVal access clobbers nothing.
+    // It really means that it will not clobber the entire world. It's still up to you to
+    // carefully consider things like:
+    // - PutByVal definitely changes the array it stores to, and may even change its length.
+    // - PutByOffset definitely changes the object it stores to.
+    // - and so on.
     bool byValIsPure(Node& node)
     {
         switch (node.arrayMode()) {
